BE-Berechnung für Rüstungskombinationen